# ITK-test-task

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt
src/: main.py  settings.py
src/application/: exceptions.py
src/application/abstractions/: __init__.py  i_wallet_repository.py
src/application/contracts/: __init__.py  i_wallet_service.py
src/application/domain/: operation_type.py
src/application/services/: __init__.py  wallet_service.py
src/infrastructure/database/: database.py
src/infrastructure/database/migrations/versions/: a7bf8c15589f_wallet_model.py
src/infrastructure/database/models/: __init__.py  base.py  wallet.py
src/infrastructure/database/repositories/: __init__.py  wallet_repostiory.py
src/infrastructure/logger/: __init__.py  logger.py
src/presentation/: exception_handlers.py
src/presentation/middleware/: trace_id.py
src/presentation/routing/: wallet_router.py
src/presentation/schemas/: wallet.py
tests/: conftest.py
tests/integration/: test_wallet_api.py
tests/unit/: test_exceptions.py  test_wallet_model.py  test_wallet_repository.py  test_wallet_service.py
